--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 
 </head>
-<body class="mat-typography">
+<body class="mat-typography" style="height: auto;">
   <app-root></app-root>
 </body>
 </html>
